--- a/package.json
+++ b/package.json
@@ -3,19 +3,18 @@
     "cors": "^2.8.5",
     "dotenv": "^17.2.1",
     "express": "^5.1.0",
+    "moment-timezone": "^0.6.0",
     "mongoose": "^8.17.0",
     "nodemon": "^3.1.10"
   },
   "name": "honeycomb-backend",
   "version": "1.0.0",
   "main": "server.js",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js"
-    
   },
-  "type" :"module",
+  "type": "module",
   "keywords": [],
   "author": "vishal yadav",
   "license": "ISC",
